--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/webmidi": "^2.0.2",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
