--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@types/webmidi": "^2.0.2",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.4.1",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
@@ -48,5 +48,8 @@
     "tslint": "~5.9.1",
     "typescript": "~2.5.3",
     "uglifyjs-webpack-plugin": "^1.0.0-rc.0"
+  },
+  "resolutions": {
+    "**/**/node-gyp": "^3.8.0"
   }
 }
